[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/HUD.gd" type="Script" id=1]
[ext_resource path="res://Menus/theme.theme" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.776471, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.454902 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer"]
visible = false
margin_left = 290.0
margin_top = 197.0
margin_right = 310.0
margin_bottom = 202.0
rect_min_size = Vector2( 20, 5 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="Upgrades" type="HBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_bottom = -66.0
alignment = 1

[node name="Button" type="Button" parent="Upgrades"]
margin_left = 236.0
margin_right = 276.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "+ range"

[node name="Button2" type="Button" parent="Upgrades"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "+ fire rate"

[node name="Button3" type="Button" parent="Upgrades"]
margin_left = 324.0
margin_right = 364.0
margin_bottom = 22.0
rect_min_size = Vector2( 40, 0 )
text = "+ shot count"

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 10.0
step = 1.0
percent_visible = false

[node name="Label" type="Label" parent="ProgressBar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_bottom = -13.0
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Upgrades/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Upgrades/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Upgrades/Button3" to="." method="_on_Button3_pressed"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
